# api-python

./: .env.example  .gitignore  Dockerfile  README.md  config.py  conftest.py  firebase.json  pyproject.toml
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml  host-init.sh  post-create.sh  post-start.sh
.github/workflows/: deploy_lambda.yml  test.yml
app/: app.py  app_e2e_test.py  base_error.py  base_service.py  error.py  main.py  main_lambda.py  service.py
app/auth/: models.py  repo.py  repo_firebase.py  repo_firebase_integration_test.py  repo_memory.py  repo_memory_test.py  repo_test.py  router.py  router_fastapi.py  router_test.py  service.py  service_firebase.py  service_firebase_integration_test.py
app/database/: models.py
app/subscription/: models.py  repo.py  repo_test.py  router.py  router_fastapi.py  router_stripe_webhooks.py  router_webhooks.py  service.py  service_mock.py  service_stripe.py  service_stripe_integration_test.py
app/subscription/adapters/: repo_memory.py  repo_memory_test.py  router_webhooks_mock.py  router_webhooks_stripe.py  service_mock.py  service_stripe.py
app/subscription_portal/: models.py  service.py  service_stripe.py
app/user/: models.py  repo.py  repo_in_mem.py  repo_memory.py  repo_memory_test.py  repo_test.py  service.py
deploy/aws_sam/: .gitignore  Dockerfile  samconfig.toml  template.yaml
deploy/docker/: .dockerignore  Dockerfile
scripts/: build-sam.sh  firebase-reset-users.sh  firebase-start-emulators.sh  preview_docker.sh  preview_sam.sh  run.sh  stripe-listen.sh  test.sh
scripts/admin/: .env.example  add-stripe-subscription-webhook-endpoint.sh  deploy-lambda.sh  deploy_lambda.sh  log-tail-lambda.sh  remove-stripe-subscription-webhook-endpoint.sh  set-aws-secrets.sh  set-github-secrets.sh
tests/: conftest.py
tests/integration/app/subscription_portal/: service_test.py
tests/unit/app/auth/: models_test.py
