[tool.poetry]
name = "api-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"

mangum = "^0.19.0"
pydantic = "^2.9.2"
pydantic-extra-types = "^2.10.0"
python-multipart = "^0.0.17"
shortuuid = "^1.0.13"
email-validator = "^2.2.0"
psycopg = "^3.2.3"
stripe = "^11.3.0"
firebase-admin = "^6.6.0"
jwt = "^1.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
isort = "^5.13.2"
uvicorn = "^0.32.0"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--import-mode=importlib"
asyncio_default_fixture_loop_scope = "function"
